--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/hammer.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/hammer.yml
@@ -46,7 +46,8 @@
 
 - type: modularPart
   id: BladeIronHammer
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Blade/Hammer/metall_hammer.rsi
   modifiers:
@@ -57,7 +58,8 @@
 
 - type: modularPart
   id: BladeGoldHammer
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Blade/Hammer/metall_hammer.rsi
   color: "#ffaf47"
@@ -69,7 +71,8 @@
 
 - type: modularPart
   id: BladeCopperHammer
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Blade/Hammer/metall_hammer.rsi
   color: "#bd712f"
@@ -81,7 +84,8 @@
 
 - type: modularPart
   id: BladeMithrilHammer
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Blade/Hammer/metall_hammer.rsi
   color: "#45d2a4"
