--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/mace.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/mace.yml
@@ -27,7 +27,8 @@
 
 - type: modularPart
   id: BladeIronMace
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Blade/Mace/metall_mace.rsi
   modifiers:
@@ -38,7 +39,8 @@
 
 - type: modularPart
   id: BladeGoldMace
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Blade/Mace/metall_mace.rsi
   color: "#ffaf47"
@@ -50,7 +52,8 @@
 
 - type: modularPart
   id: BladeCopperMace
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Blade/Mace/metall_mace.rsi
   color: "#bd712f"
@@ -62,7 +65,8 @@
 
 - type: modularPart
   id: BladeMithrilMace
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Blade/Mace/metall_mace.rsi
   color: "#45d2a4"
