--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/shovel.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/shovel.yml
@@ -31,7 +31,8 @@
 
 - type: modularPart
   id: BladeIronShovel
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Blade/Shovel/metall_shovel.rsi
   modifiers:
@@ -42,7 +43,8 @@
 
 - type: modularPart
   id: BladeGoldShovel
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Blade/Shovel/metall_shovel.rsi
   color: "#ffaf47"
@@ -54,7 +56,8 @@
 
 - type: modularPart
   id: BladeCopperShovel
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Blade/Shovel/metall_shovel.rsi
   color: "#bd712f"
@@ -66,7 +69,8 @@
 
 - type: modularPart
   id: BladeMithrilShovel
-  targetSlot: Blade
+  slots:
+  - Blade
   sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Blade/Shovel/metall_shovel.rsi
   color: "#45d2a4"
