--- a/Resources/Prototypes/_CP14/ModularCraft/Garde/sharp.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Garde/sharp.yml
@@ -11,7 +11,8 @@
 
 - type: modularPart
   id: GardeSharpIron
-  targetSlot: Garde
+  slots:
+  - Garde
   sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sharp.rsi
   modifiers:
@@ -21,7 +22,8 @@
 
 - type: modularPart
   id: GardeSharpGold
-  targetSlot: Garde
+  slots:
+  - Garde
   sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sharp.rsi
   color: "#ffaf47"
@@ -32,7 +34,8 @@
 
 - type: modularPart
   id: GardeSharpCopper
-  targetSlot: Garde
+  slots:
+  - Garde
   sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sharp.rsi
   color: "#bd712f"
@@ -43,7 +46,8 @@
 
 - type: modularPart
   id: GardeSharpMithril
-  targetSlot: Garde
+  slots:
+  - Garde
   sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sharp.rsi
   color: "#45d2a4"
