--- a/Resources/Prototypes/_CP14/ModularCraft/Garde/sturdy.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Garde/sturdy.yml
@@ -11,7 +11,8 @@
 
 - type: modularPart
   id: GardeSturdyIron
-  targetSlot: Garde
+  slots:
+  - Garde
   sourcePart: CP14ScrapIron
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sturdy.rsi
   modifiers:
@@ -21,7 +22,8 @@
 
 - type: modularPart
   id: GardeSturdyGold
-  targetSlot: Garde
+  slots:
+  - Garde
   sourcePart: CP14ScrapGold
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sturdy.rsi
   color: "#ffaf47"
@@ -32,7 +34,8 @@
 
 - type: modularPart
   id: GardeSturdyCopper
-  targetSlot: Garde
+  slots:
+  - Garde
   sourcePart: CP14ScrapCopper
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sturdy.rsi
   color: "#bd712f"
@@ -43,7 +46,8 @@
 
 - type: modularPart
   id: GardeSturdyMithril
-  targetSlot: Garde
+  slots:
+  - Garde
   sourcePart: CP14ScrapMithril
   rsiPath: _CP14/Objects/ModularTools/Garde/metall_sturdy.rsi
   color: "#45d2a4"
