--- a/Resources/Maps/_CP14/comoss.yml
+++ b/Resources/Maps/_CP14/comoss.yml
@@ -85,6 +85,7 @@ entities:
     components:
     - type: MetaData
       name: grid
+    - type: Roof
     - type: Transform
       parent: 1
     - type: BecomesStation
