--- a/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
@@ -127,25 +127,25 @@
   result: CP14BowCombat
 
 - type: CP14Recipe
-  id: CP14ModularGripRodWooden
+  id: CP14ModularRodWooden
   tag: CP14RecipeWorkbench
   craftTime: 3
   requirements:
   - !type:StackResource
     stack: CP14WoodenPlanks
     count: 1
-  result: CP14ModularGripRodWooden
+  result: CP14ModularRodWooden
   resultCount: 4
 
 - type: CP14Recipe
-  id: CP14ModularGripRodLucens
+  id: CP14ModularRodLucens
   tag: CP14RecipeWorkbench
   craftTime: 3
   requirements:
   - !type:StackResource
     stack: CP14LucensWoodenPlanks
     count: 1
-  result: CP14ModularGripRodLucens
+  result: CP14ModularRodLucens
   resultCount: 4
 
 - type: CP14Recipe
