--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/Random/Loot/demiplane.yml
@@ -68,7 +68,7 @@
   parent: MarkerBase
   id: CP14SpawnerDemiplaneLootT2
   name: Demiplane T2 Loot
-  categories: [ ForkFiltered ]
+  categories: [ ForkFiltered, DoNotMap ]
   components:
   - type: Sprite
     layers:
