--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/unique_loot.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/unique_loot.yml
@@ -2,8 +2,7 @@
   name: random artifact spawner
   id: CP14SpawnUniqueArtifact
   parent: MarkerBase
-  suffix: Unique, DO NOT MAP
-  categories: [ ForkFiltered ]
+  categories: [ ForkFiltered, DoNotMap ]
   components:
   - type: CP14UniqueLootSpawner
   - type: Sprite
