--- a/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
@@ -33,7 +33,8 @@
   parent: CP14ClothingRingBase
   name: fireball conductive ring
   description: A standard mana-conductive ring that allows the user to summon fireballs.
-  suffix: Fireball, Artifact, DO NOT MAP
+  categories: [ DoNotMap ]
+  suffix: Fireball, Artifact
   components:
   - type: Sprite
     layers:
