--- a/Resources/Prototypes/_CP14/Reagents/basic-effects.yml
+++ b/Resources/Prototypes/_CP14/Reagents/basic-effects.yml
@@ -53,6 +53,8 @@
   metabolisms:
     Medicine:
       effects:
+      - !type:ModifyBleedAmount
+        amount: -2
       - !type:HealthChange
         damage:
           groups:
