--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -141,7 +141,7 @@
       - id: CP14ModularGripIronLongGuard
         amount: 2
       - id: CP14BaseLightCrossbow
-      - id: CP14Crossbolt
+      - id: CP14CrossboltIron
         amount: 5
       - id: CP14EnergyCrystalSmall
       - id: CP14CrystalLampBlueEmpty
