--- a/Resources/Prototypes/_CP14/Guidebook/Eng/alchemy.yml
+++ b/Resources/Prototypes/_CP14/Guidebook/Eng/alchemy.yml
@@ -5,9 +5,9 @@
   text: "/ServerInfo/_CP14/Guidebook_EN/Alchemy.xml"
   children:
   - CP14_EN_BasicAlchemy
-  - CP14_EN_Biological
+  - CP14_EN_Organic
   - CP14_EN_Inorganic
-  - CP14_EN_Archaic
+  - CP14_EN_Arcane
   filterEnabled: True
 
 - type: guideEntry
@@ -19,9 +19,9 @@
 
 - type: guideEntry
   crystallPunkAllowed: true
-  id: CP14_EN_Biological
-  name: Biological solutions
-  text: "/ServerInfo/_CP14/Guidebook_EN/AlchemyTabs/Biological.xml"
+  id: CP14_EN_Organic
+  name: Organic solutions
+  text: "/ServerInfo/_CP14/Guidebook_EN/AlchemyTabs/Organic.xml"
   filterEnabled: True
 
 - type: guideEntry
@@ -33,9 +33,9 @@
 
 - type: guideEntry
   crystallPunkAllowed: true
-  id: CP14_EN_Archaic
-  name: Archaic solutions
-  text: "/ServerInfo/_CP14/Guidebook_EN/AlchemyTabs/Archaic.xml"
+  id: CP14_EN_Arcane
+  name: Alchemized solutions
+  text: "/ServerInfo/_CP14/Guidebook_EN/AlchemyTabs/Arcane.xml"
   filterEnabled: True
 
 - type: guideEntry
